# voicelens-scripts

./: .gitignore  .pre-commit-config.yaml  ASSISTABLE_AI_INTEGRATION.md  CONTACT-US.md  CONTRIBUTING.md  DEPLOYMENT.md  HANDOVER_GUIDE.md  LICENSE  LLM-DOCS-FULL.md  LOGISTICS.md  Makefile  README.md  README.md.old  README_ENVIRONMENT.md  TYPESCRIPT_IMPLEMENTATION_CORRECTION.md  USAGE.md  VCP_GOVERNANCE_CHARTER.md  VCP_GOVERNANCE_EXECUTIVE_SUMMARY.md  VCP_IMPLEMENTATION_CONSISTENCY_FRAMEWORK.md  VCP_V0.5_CHANGELOG.md  VCP_WORKING_GROUPS_STRUCTURE.md  activate_and_deploy.sh  activate_env.sh  analyze_delivery.py  deploy_local_prod.py  ensure_venv.py  manifest.json  monitor_provider_changes.py  provider_documentation.py  provider_monitoring.py  pyproject.toml  requirements.txt  sample_vcp_output.json  send_baselines.py  send_large_batch.py  setup_monitoring_cron.sh  test_generator.py  vcp_v04_schema.py  vcp_v05_schema.py  voicelens_ops_app.py
baseline_examples/: hvac_001_booked_service_retell.json  hvac_002_live_transfer_vapi.json  hvac_003_scheduled_callback_bland.json  hvac_004_quote_requested_retell.json  hvac_005_out_of_service_area_vapi.json  hvac_006_spam_filtered_retell.json  hvac_007_no_show_cancel_bland.json  hvac_008_emergency_service_retell.json
docs/: DEPLOYMENT_OPERATIONS_GUIDE.md  PROVIDER_INTEGRATION_GUIDE.md  README.md  VCP_SCHEMA_SPECIFICATION.md  VCP_SYSTEM_OVERVIEW.md
reports/: quality.md
scripts/: concat_docs.py  pre-commit-docs  setup_docs_hook.sh
src/voicelens_seeder/: __init__.py  cli.py
src/voicelens_seeder/db/: __init__.py  schema.sql
src/voicelens_seeder/generator/: hvac_scenarios.py  synthetic.py
src/voicelens_seeder/normalizers/: vcp.py
synthetic_data/: hvac_001_out_of_service_area_retell.json  hvac_002_booked_service_retell.json  hvac_003_live_transfer_retell.json  hvac_004_booked_service_retell.json  hvac_005_booked_service_retell.json
templates/: dashboard.html
